--- a/index.html
+++ b/index.html
@@ -749,6 +749,7 @@
                         <li><i class="fas fa-map-marker-alt"></i> Nezahualcóyotl</li>
                         <li><i class="fas fa-map-marker-alt"></i> Texcoco y Chimalhuacán</li>
                         <li><i class="fas fa-map-marker-alt"></i> Ciudad de México (CDMX)</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Todo Estado de México</li>
                     </ul>
                 </div>
 
@@ -760,19 +761,19 @@
                             <h3>¿Cuál es el costo de las placas del EdoMex en 2026?</h3>
                             <p>El costo varía según el tipo de vehículo (auto, moto, carga) y si es alta nueva o
                                 renovación. En Gestor de Autos te ofrecemos una <strong>cotización exacta y
-                                    transparente</strong> por WhatsApp. ¡Pregunta por nuestras promociones del mes!</p>
+                                    transparente</strong> por WhatsApp.</p>
                         </div>
                         <div class="faq-item">
                             <h3>¿Realizan trámites urgentes sin cita?</h3>
-                            <p>¡Sí! Somos especialistas en gestión rápida. Olvídate de las filas y de buscar citas en el
-                                portal. Nosotros nos encargamos de todo el proceso de forma <strong>100% online y
-                                    urgente</strong> si lo requieres.</p>
+                            <p>¡Sí! Nosotros gestionamos todo el proceso y <strong>te generamos la cita</strong>. Tú
+                                solo acudes al módulo a recoger tus placas, sin filas de espera ni estrés. Iniciamos tu
+                                trámite de forma <strong>100% online</strong>.</p>
                         </div>
                         <div class="faq-item">
-                            <h3>¿Puedo emplacar mi auto sin factura original?</h3>
-                            <p>Analizamos tu caso específico. En muchas ocasiones podemos ayudarte mediante procesos de
-                                <strong>jurisdicción voluntaria o facturas judiciales</strong>. Contáctanos para revisar
-                                tu documentación gratis.</p>
+                            <h3>¿Necesito ir a dejar mis documentos originales?</h3>
+                            <p><strong>No.</strong> Solo requerimos copias escaneadas (no fotos, no apps de celular) de
+                                tu factura de origen y documentos vigentes. Esto garantiza la agilidad y corrección de
+                                tu trámite. Evita riesgos y coyotes con mala reputación.</p>
                         </div>
                         <div class="faq-item">
                             <h3>¿Es seguro tramitar mi licencia o placas por internet?</h3>
